Adding getAllEventsCreatedByUser
