# src/main/resources/swagger/inventory.yml
@@ -104,6 +104,26 @@ paths:
           description: "Not Found"
           schema:
             $ref: "#/definitions/Error"
+  /event/events/{userid}:
+    get:
+      summary: "retrieving all Events by UserId"
+      tags:
+        - "event"
+      parameters:
+        - name: "userid"
+          description: "userid of the user who created the events"
+          required: true
+          type: string
+          in: path
+      responses:
+        "201":
+          description: "Success"
+          schema:
+            $ref: "#/definitions/ArrayOfEvents"
+        "401":
+          description: "Not Found"
+          schema:
+            $ref: "#/definitions/Error"
   /issue:
     post:
       tags:
